# cartiflette

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.qmd  _download_pb.py  dev.py  dev_get_BV.ipynb  draft_s3.ipynb  filter_vintages_operationnal.py  no interaction  pyproject.toml  requirements.txt  rtest.ipynb  s3.py  setup.py  table-appartenance-geo-communes-2024(1).xlsx  table-appartenance-geo-communes-2024.xlsx  tests.py  write_s3.py
.github/workflows/: check.yml  docker.yml  lint.yml  publish-client.yml  publish.yml  pypi.yml  python-package-conda.yml
argo-pipeline/: README.md  api.py  pipeline.yaml
argo-pipeline/src/: catalog.py  crossproduct.py  download_all_sources.py  duplicate_in_bucket.py  filter_vintages_operationnal.py  make_geodata_datasets.py  make_metadata_datasets.py  make_unified_base_geodatasets.py  select_downstream_vintage_to_process.py  select_new_base_geodatasets.py  split_merge_tiles.py  split_merge_tiles_multithreading.py
cartiflette/: __init__.py  config.py  constants.py  pipeline_constants.py  sources.yaml
cartiflette/api/: __init__.py  output.py
cartiflette/download/: __init__.py  dataset.py  dev.py  download.py  layer.py  pipeline.py  scraper.py
cartiflette/mapshaper/: __init__.py  mapshaper_add_field.py  mapshaper_capture_cities_from_ultramarine_territories.py  mapshaper_closer.py  mapshaper_combine_districts_and_cities.py  mapshaper_concat.py  mapshaper_convert_mercator.py  mapshaper_convert_reproject.py  mapshaper_dissolve.py  mapshaper_enrich.py  mapshaper_process_communal_districts.py  mapshaper_remove_cities_with_districts.py  mapshaper_simplify.py  mapshaper_split.py  mapshaper_wrangling.py  mapshaperize.py  utils.py
cartiflette/path/: __init__.py  path.py
cartiflette/pipeline/: __init__.py  combine_adminexpress_france.py  cross_product_parameters.py  download.py  mapshaper_split_from_s3.py  prepare_cog_metadata.py  prepare_geodatasets.py  prepare_mapshaper.py
cartiflette/public/: __init__.py  output.py
cartiflette/s3/: __init__.py  dataset.py  download_vectorfile.py  geodataset.py  inventory.py  list_files_s3.py  preprocess.py  s3.py  upload_raw_s3.py
cartiflette/utils/: __init__.py  _download_pb.py  _import_yaml_config.py  create_path_bucket.py  csv_magic.py  dict_correspondance.py  dict_update.py  hash.py  keep_subset_geopandas.py  s3_paths.py  sources.yaml  standardize_inputs.py  vectorfile_format_config.py
docker/: install-mapshaper.sh  test.py
example/: dev_get_BV.ipynb  download.py  examples_download.ipynb  manual-tests.py  tests_new_sources.ipynb
misc/: carte_pitch.ipynb  debug-download.ipynb  draft_s3.ipynb  examples_download.ipynb  install-mapshaper.sh  mapshaper.py  prod.py  prototype_mapshaper.py  rtest.ipynb  test_import.py  tests.py  write_s3.py
misc/argo-pipeline/: pipeline.yaml
misc/argo-pipeline/src/: crossproduct.py  duplicate_in_bucket.py  enrichissement.py  notes.txt  prod.py  split_merge_tiles.py  split_tiles.py
misc/resources/: doc.md  mail-type.md
python-package/cartiflette/: README.md  pyproject.toml
python-package/cartiflette/cartiflette/: __init__.py  client.py  config.py  constants.py  utils.py
python-package/cartiflette/tests/: test_client.py
resources/: donnees.yaml  mail-type.md  sources.yaml
tests/: conftest.py  dev_get_BV.ipynb  manual_writing_tests.py  mockups.py  test_create_path_bucket.py  test_download.py  test_download_from_cartiflette.py  test_mapshaper_wrangling.py  test_pipeline.py  test_utils.py
