[tool.poetry]
name = "cartiflette"
version = "0.0.3"
description = "Tools to easily retrieve French borders for geographic data analytics"
authors = ["Lino Galiana <lino.galiana@insee.fr>", "Thomas Grandjean <thomas.grandjean@developpement-durable.gouv.fr>"]
license = "OPEN LICENCE 2.0/LICENCE OUVERTE 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
py7zr = "^0.20.4"
geopandas = "^1.0.1"
openpyxl = "^3.1.5"
s3fs = "^2023.3.0"
PyYAML = "^6.0"
xlrd = "^2.0.1"
topojson = "^1.5"
appdirs = "^1.4.4"
owslib = "^0.28.1"
matplotlib = "^3.7.1"
python-dotenv = "^1.0.0"
python-magic-bin = {version = "^0.4.14", markers = "sys_platform == 'win32'"}
python-magic = {version = "^0.4.14", markers = "sys_platform == 'linux'"}
requests-cache = "^1.1.0"
unidecode = "^1.3.6"
charset-normalizer = "^3.2.0"
pebble = "^5.0.3"
fiona = {extras = ["s3"], version = "^1.9.4.post1"}
pyarrow = "^17.0.0"
diskcache = "^5.6.3"
urllib3 = "<2"
retrying = "^1.3.4"
pandas = "^2.2.2"
polars = "^1.8.1"
fastexcel = "^0.11.6"


[tool.poetry.group.dev.dependencies]
PyQt5 = {version = "^5.15", markers = "sys_platform == 'win32'"}
PyQt5-Qt5 = {version = "5.15.2", markers = "sys_platform == 'win32'"}
PyQtWebEngine-Qt5 = {version = "5.15.2", markers = "sys_platform == 'win32'"}
spyder = "^6.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"