[project]
name = "cartiflette"
version = "0.0.3"
description = "Tools to easily retrieve French borders for geographic data analytics"
authors = [
    { name = "Lino Galiana", email = "lino.galiana@insee.fr" },
    { name = "Thomas Grandjean", email = "thomas.grandjean@developpement-durable.gouv.fr" },
]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.28.2",
    "py7zr>=0.20.4",
    "geopandas>=1.0.1",
    "openpyxl>=3.1.5",
    "s3fs>=2023.3.0",
    "PyYAML>=6.0",
    "xlrd>=2.0.1",
    "topojson>=1.5",
    "appdirs>=1.4.4",
    "owslib>=0.28.1",
    "matplotlib>=3.7.1",
    "python-dotenv>=1.0.0",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "python-magic>=0.4.14 ; sys_platform == 'linux'",
    "requests-cache>=1.1.0",
    "unidecode>=1.3.6",
    "charset-normalizer>=3.2.0",
    "pebble>=5.0.3",
    "fiona[s3]>=1.9.4.post1",
    "pyarrow>=17.0.0",
    "diskcache>=5.6.3",
    "urllib3",
    "retrying>=1.3.4",
    "pandas>=2.2.2",
    "polars>=1.8.1",
    "fastexcel>=0.11.6",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
