[tool.poetry]
name = "cartiflette"
version = "0.1.3"
description = "Tools to easily retrieve French borders for geographic data analytics"
authors = ["Lino Galiana <lino.galiana@insee.fr>", "Thomas Grandjean <thomas.grandjean@developpement-durable.gouv.fr>", "Alica Burlot <alica.burlot@developpement-durable.gouv.fr>"]
license = "OPEN LICENCE 2.0/LICENCE OUVERTE 2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
requests-cache = "^1.2.1"
geopandas = "^1.0.1"
platformdirs = "^4.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
