[tool.poetry]
name = "cartiflette"
version = "0.1.6"
description = "Tools to easily retrieve French borders for geographic data analytics"
authors = ["Lino Galiana <lino.galiana@insee.fr>", "Thomas Grandjean <thomas.grandjean@developpement-durable.gouv.fr>", "Alica Burlot <alica.burlot@developpement-durable.gouv.fr>"]
license = "OPEN LICENCE 2.0/LICENCE OUVERTE 2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
requests-cache = "^1.2.1"
geopandas = "^1.0.1"
platformdirs = "^4.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
matplotlib = "^3.9.2"
PyQt5 = {version = "^5.15", markers = "sys_platform == 'win32'"}
PyQt5-Qt5 = {version = "5.15.2", markers = "sys_platform == 'win32'"}
PyQtWebEngine-Qt5 = {version = "5.15.2", markers = "sys_platform == 'win32'"}
spyder = "^6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
