[project]
name = "cartiflette"
version = "0.1.6"
description = "Tools to easily retrieve French borders for geographic data analytics"
authors = [
    { name = "Lino Galiana", email = "lino.galiana@insee.fr" },
    { name = "Thomas Grandjean", email = "thomas.grandjean@developpement-durable.gouv.fr" },
    { name = "Alica Burlot", email = "alica.burlot@developpement-durable.gouv.fr" },
]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "geopandas>=1.0.1",
    "platformdirs>=4.3.6",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "matplotlib>=3.9.2,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
